--- a/package.json
+++ b/package.json
@@ -13,19 +13,19 @@
     "build": "vite build"
   },
   "devDependencies": {
-    "@siyuan-community/siyuan-sdk": "0.3.6",
-    "@types/node": "^20.11.5",
-    "@vitejs/plugin-vue": "^5.0.3",
-    "fast-glob": "^3.3.2",
-    "glob": "^7.2.3",
+    "@siyuan-community/siyuan-sdk": "^0.3.14",
+    "@types/node": "^20.19.9",
+    "@vitejs/plugin-vue": "^6.0.0",
+    "fast-glob": "^3.3.3",
+    "glob": "^11.0.3",
     "minimist": "^1.2.8",
-    "rollup-plugin-livereload": "^2.0.5",
-    "siyuan": "0.9.2",
+    "rollup-plugin-livereload": "2.0.5",
+    "siyuan": "^1.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "vite": "5.0.11",
-    "vite-plugin-static-copy": "1.0.0",
-    "vite-plugin-zip-pack": "^1.0.7"
+    "typescript": "5.8.3",
+    "vite": "^7.0.5",
+    "vite-plugin-static-copy": "^3.1.1",
+    "vite-plugin-zip-pack": "^1.2.4"
   },
   "dependencies": {
     "vue": "3.4.8"
